tests/ui/missing_repr.stderr
error: missing #[repr(...)] attribute
 --> $DIR/missing_repr.rs:3:10
  |
3 | #[derive(SerializeRepr)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
